Server/esp_server/build/log/idf_py_stderr_output_46120
Command: make -j 10 all
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_write':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:160:30: error: passing argument 1 of 'fopen' from incompatible pointer type [-Wincompatible-pointer-types]
  160 |     FILE *file = fopen(params->file, "wb");
      |                        ~~~~~~^~~~~~
      |                              |
      |                              FILE *
In file included from /home/zeila/Documents/CMPT496/Graphite/esp-idf/components/newlib/platform_include/stdio.h:10,
                 from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:1:
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:249:39: note: expected 'const char * restrict' but argument is of type 'FILE *'
  249 | FILE *  fopen (const char *__restrict _name, const char *__restrict _type);
      |                ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from /home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:6:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:162:50: error: 'filepath' undeclared (first use in this function)
  162 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |                                                  ^~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:70:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   70 | #define ESP_LOGE( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_ERROR,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:162:9: note: in expansion of macro 'ESP_LOGE'
  162 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |         ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:162:50: note: each undeclared identifier is reported only once for each function it appears in
  162 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |                                                  ^~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:70:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   70 | #define ESP_LOGE( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_ERROR,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:162:9: note: in expansion of macro 'ESP_LOGE'
  162 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |         ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:166:9: error: continue statement not within a loop
  166 |         continue;
      |         ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_read':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:198:30: error: passing argument 1 of 'fopen' from incompatible pointer type [-Wincompatible-pointer-types]
  198 |     FILE *file = fopen(params->file, "rb");
      |                        ~~~~~~^~~~~~
      |                              |
      |                              FILE *
/home/zeila/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdio.h:249:39: note: expected 'const char * restrict' but argument is of type 'FILE *'
  249 | FILE *  fopen (const char *__restrict _name, const char *__restrict _type);
      |                ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:200:50: error: 'filepath' undeclared (first use in this function)
  200 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |                                                  ^~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/Graphite/esp-idf/components/log/include/esp_log.h:70:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   70 | #define ESP_LOGE( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_ERROR,   tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:200:9: note: in expansion of macro 'ESP_LOGE'
  200 |         ESP_LOGE(TAG, "Failed to open file: %s", filepath);
      |         ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:204:9: error: continue statement not within a loop
  204 |         continue;
      |         ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'serverTask':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:358:24: error: 'file' undeclared (first use in this function)
  358 |         params->file = file;
      |                        ^~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:99:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   99 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   43 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   42 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
